--- a/src/styles/blocks/visit-us.scss
+++ b/src/styles/blocks/visit-us.scss
@@ -5,14 +5,16 @@
 
   &__addres-link {
     text-decoration: none;
-  }
-
-  &__addres {
     font-family: 'Open Sans', sans-serif;
     font-size: 24px;
     font-weight: 600;
     line-height: 36px;
     text-align: left;
     color: #fff;
+    transition: color 0.3s;
+
+    &:hover {
+      color: #144ED4;
+    }
   }
 }
