--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,13 +1,26 @@
 .aside {
   height: 100vh;
   background-color: #2c2c2c;
-  display: flex;
-  justify-content: space-between;
   box-sizing: border-box;
 
   @include on-small-desktop {
     display: none;
   }
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 35px;
+  }
+
+  &__logo {
+    display: block;
+    height: 28px;
+    width: 46px;
+  }
+
+
 
   &__list {
     display: flex;
@@ -29,7 +42,7 @@
     padding: 0;
 
     font-family: Poppins, sans-serif;
-    font-size: 35px;
+    font-size: 13px;
     font-weight: 700;
     line-height: 19.5px;
     letter-spacing: 3px;
