--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -14,6 +14,7 @@
   }
 
   &__link {
+    position: relative;
     text-decoration: none;
     color: #fff;
 
@@ -24,5 +25,28 @@
     letter-spacing: 3px;
     text-align: center;
     text-transform: uppercase;
+
+    padding-bottom: 8px;
+
+    &::after {
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      content: '';
+      background-color: #144ED4;
+      height: 2px;
+      transform: scale(0);
+      transition: transform 0.3s;
+      transform-origin: left;
+    }
+
+    &:hover::after {
+      transform: scale(1);
+    }
+
+
+
+
   }
 }
